--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et enim laboriosam totam. Cum a blanditiis dolorum. Est quasi fugiat expedita optio consequuntur dolorum sunt commodi. Ad facilis distinctio magnam?</p>
             </article>
             <article>
-                Imagens ilustrativas:
-                Entradas
-                Prato Principal
-                Sobremesas
+                <h2>Entradas</h2>
+                <img src="imgs/entradas/guioza-para-festa.jpg" alt="Guioza_entrada" width="100" height="80">
+                <img src="imgs/entradas/rolinho-primavera.jpg" alt="rolinho_primavera" width="100" height="80">
+                <h2>Pratos principais</h2>
+                <img src="imgs/principais/Comida-japonesa-uramaki.jpg" alt="uramaki" width="100" height="80">
+                <img src="imgs/principais/Comida-oriental-hot-roll.jpg" alt="hot_holl" width="100" height="80">
+                <img src="imgs/principais/Sashimi-festa.jpg" alt="sashimi" width="100" height="80">
+                <h2>Sobremesas</h2>
+                <img src="imgs/sobremesas/download (1).jpeg" alt="sorvete_chá_verde" width="100" height="80">
+                <img src="imgs/sobremesas/download.jpeg" alt="Mochi" width="100" height="80">
+                <img src="imgs/sobremesas/download (2).jpeg" alt="Dorayaki" width="100" height="80">
             </article>
         </section>
     </div>
